# bank-app

./: Cargo.toml  README.md  docker-compose.yml
src/: auth.rs  credits.rs  main.rs  money.rs  wallet.rs
src/data/: credits.json  txhash.json  wallet.json
