[package]
name = "rust-bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
cargo-make = "0.35.6"
derive_builder = "0.10.2"
diesel = { version = "1.4.8",  features = ["postgres"] }
dotenv = "0.15.0"
mockall = "0.10.2"
parse-display = "0.5.3"
prost = "0.8.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
thiserror = "1.0.30"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.5.2"
ulid = "0.5.0"
rusty-money = "0.4.1"
sha2 = "0.10.2"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4.22" 
serde = "1.0.143"
serde_json = "1.0.83"
hex-literal = "0.3.4"
hmac = "0.12.1"
rand = "0.8.5"